--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,18 @@
     color:#243342
 }
 
+@font-face {
+  font-family: 'LilGrotesk';
+  src: url('fonts/LilGrotesk-Bold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'LilGrotesk-Regular';
+  src: url('fonts/LilGrotesk-Regular.otf') format('opentype');
+}
+
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'LilGrotesk', sans-serif;
     line-height: 1.6;
     color: #333;
     padding: 20px;
@@ -54,7 +64,6 @@ nav ul li a {
 
 .header-sect{
     background: linear-gradient(90deg, #ffffff 70%, #78b2c0 60%);
-
     width: 100%;
 }
 
@@ -91,6 +100,7 @@ header h2 {
 }
 
 .intro-line {
+    font-family: "LilGrotesk-Regular";
     margin-top: -30px;
     font-size: 2rem;
 }
@@ -219,6 +229,7 @@ header p {
   }
   
   .project-description {
+    font-family: "LilGrotesk-Regular";
     margin-bottom: 20px;
     color: #555;
     font-size: 1rem;
